@@ -1,3 +1,9 @@
+2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* mph.h: Add fallback typedefs for blkcnt_t, blksize_t, suseconds_t so that
+	  map.c can rely on their presence.  (Some versions of OS X don't provide
+	  these typedefs.)
+
 2006-10-27  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* map.c: Improve handling of [Flags] enumerations which mix bitfields and
